some final tweaks for a loader

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 
 <body>
 
+<div class="loading js_loading">
+	<div class="js_get_js get_js">
+		<p>
+<!-- 		Looks like you don't have javascript enabled. Go <a href="https://www.google.com/search?q=turn+on+javascript" target="_blank">sort your shit</a> out. -->
+		</p>
+	</div>
+
+	<div class="spinner">
+	  Loading...
+	</div>
+
+</div>
+
 <div class="yelling js_yelling" id="stopyelling">
 	<p>This <strong>is</strong> my inside voice</p>
 	<a class="dude" href="#dude"><em>Dude</em></a>
