so many little CSS tweaks it makes my teeth itch

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 
 <!-- Le styles -->
 <link href="design/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Exo:400,900' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Bowlby+One+SC' rel='stylesheet' type='text/css'>
 <link href="design/css/go.css" rel="stylesheet">
 <link href="design/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+<!--
+<script type="text/javascript" src="http://use.typekit.com/yln3xux.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+-->
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -27,31 +32,38 @@
 </head>
 
 <body>
+<!--
 
 <div class="loading js_loading">
 	<div class="js_get_js get_js">
 		<p>
-<!-- 		Looks like you don't have javascript enabled. Go <a href="https://www.google.com/search?q=turn+on+javascript" target="_blank">sort your shit</a> out. -->
+ 		Looks like you don't have javascript enabled. Go <a href="https://www.google.com/search?q=turn+on+javascript" target="_blank">sort your shit</a> out.
 		</p>
 	</div>
-
 	<div class="spinner">
 	  Loading...
 	</div>
-
 </div>
+-->
 
 <div class="yelling js_yelling" id="stopyelling">
-	<p>This <strong>is</strong> my inside voice</p>
-	<a class="dude" href="#dude"><em>Dude</em></a>
+	<p>
+		<!-- <em>Will Dayble</em> -->
+		This <strong>is</strong> my inside voice</p>
+	<div class="hide_stuff">
+		<a class="dude" href="#dude"><em>Dude</em></a>	
+	</div>
+
 </div>
 
 <div class="rad js_yelling" id="dude">
-	<a class="dude" href="#stopyelling"><em>Back</em></a>
+	<div class="hide_stuff">
+		<a class="dude" href="#stopyelling"><em>Back</em></a>
+	</div>
 	
 	<div class="container">
 
-		<h3>Will Dayble <em class="js_ego"><strong class="js_quote">Charming</strong><cite>~ <span class="js_person">Victoria Taylor</span></cite></em></h3>
+		<h3>Will Dayble <em class="js_ego"><strong class="js_quote">is charming</strong><cite> <span class="js_person">Victoria Taylor</span></cite></em></h3>
 	
 		<div class="row">
 			<div class="span6">
@@ -71,7 +83,7 @@
 				<p>It's possibly the most egotistical - if revealing - exercise I've done yet. </p>
 -->
 			</div>
-			<div class="span4 offset2">
+			<div class="span4 offset2 contactz">
 				<p>You're looking at my personal site. Most of the interesting stuff I do can be found in these links.</p>
 				<p>If you want to chat, try these:</p>
 				<div class="chat">
@@ -80,7 +92,7 @@
 					<p><label>MSN</label> <input type="text" value="will@willdayble.com"></p>
 					<p><label>Gtalk</label> <input type="text" value="will@squareweave.com.au"></p>
 				</div>
-				
+
 			</div>
 		</div>
 	
