fail at msn name

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<div class="chat">
 					<p><label>Skype</label> <input type="text" value="willdayble"></p>
 					<p><label>AIM</label> <input type="text" value="willdayble"></p>
-					<p><label>MSN</label> <input type="text" value="will@willdayble.com"></p>
+					<p><label>MSN</label> <input type="text" value="msn@willdayble.com"></p>
 					<p><label>Gtalk</label> <input type="text" value="will@squareweave.com.au"></p>
 				</div>
 
