RED MODE GO GO GO

--- a/index.html
+++ b/index.html
@@ -81,27 +81,32 @@
 		<h3>Will Dayble<em class="js_ego"><strong class="js_quote">is charming</strong><cite> <span class="js_person">Victoria Taylor</span></cite></em></h3>
 	
 		<div class="row">
-			<div class="span6">
+			<div class="span8">
+			
+				<iframe width="560" height="315" src="http://www.youtube.com/embed/DSfFgf8geS4" frameborder="0" allowfullscreen></iframe>			
+			
 				<p class="linkz">
-					<a href="http://www.squareweave.com.au"><strong><b class="caret"></b> squareweave</strong> for art direction</a> 
-					<a href="http://www.bankai.fm"><strong><b class="caret"></b> bankai</strong> for pretending to be a producer</a> 
-					<a href="http://www.facebook.com/willdayble"><strong><b class="caret"></b> facebook</strong> for social networking</a> 
-					<a href="http://www.twitter.com/willdayble"><strong><b class="caret"></b> twitter</strong> for 140 character timewasting</a> 
-					<a href="mailto:will@willdayble.com"><strong><b class="caret"></b> will@willdayble.com</strong> for email</a>
-					<a href="http://www.allcaps.fm"><strong><b class="caret"></b> ALL CAPS Records</strong> the digital record label</a>
-					<a href="http://www.youtube.com/user/allcapsrecords"><strong><b class="caret"></b> youtube</strong> for videos (mostly music).</a>
+					<a href="http://clarityengine.org"><strong><b class="caret"></b> Clarity Engine</strong> Helping charities and donors give smarter</a> 
+					<a href="http://squareweave.com.au"><strong><b class="caret"></b> squareweave</strong> Solving complex problems with the the internet</a> 
+					<a href="http://bankai.fm"><strong><b class="caret"></b> bankai</strong> bass music DJ / producer</a> 
+					<a href="http://allcaps.fm"><strong><b class="caret"></b> ALL CAPS Records</strong> the obnoxious digital record label</a>
 					<a href="http://www.couchsurfing.org/people/willdayble/"><strong><b class="caret"></b> couchsurfing</strong> for visiting backpackers</a>
-					<a href="http://www.flickr.com/photos/willdayble"><strong><b class="caret"></b> flickr</strong> for pictures</a>				
+					<a href="http://flickr.com/photos/willdayble"><strong><b class="caret"></b> flickr</strong> for photography</a>				
 				</p>
 <!--
 				<p>In remaking willdayble.com, I couldn't figure out a smart way to personify myself in code, so I asked a few friends and clients what <em>they</em> thought.</p>
 				<p>It's possibly the most egotistical - if revealing - exercise I've done yet. </p>
 -->
 			</div>
-			<div class="span4 offset2 contactz">
-				<p>You're looking at my personal site. Most of the interesting stuff I do can be found in these links.</p>
-				<p>If you want to chat, try these:</p>
+			<div class="span4 contactz">
+				<p>I'm lucky enough to do projects with rad teams. I'm into meeting clever people who are into building a better world.</p>
+				<hr>
+				<p>If you want to say hi, try these:</p>
 				<div class="chat">
+					<p><label>LinkedIn</label> <a href="http://facebook.com/willdayble">/willdayble</a></p>
+					<p><label>Mail</label> <input type="text" value="will@willdayble.com"></p>
+					<p><label>Face</label> <a href="http://facebook.com/willdayble">/willdayble</a></p>
+					<p><label>Tweet</label> <a href="http://twitter.com/willdayble">@willdayble</a></p>					
 					<p><label>Skype</label> <input type="text" value="willdayble"></p>
 					<p><label>AIM</label> <input type="text" value="willdayble"></p>
 					<p><label>MSN</label> <input type="text" value="msn@willdayble.com"></p>
