--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 					<a href="http://bankai.fm"><strong><b class="caret"></b> bankai</strong> bass music DJ / producer</a> 
 					<a href="http://allcaps.fm"><strong><b class="caret"></b> ALL CAPS Records</strong> the obnoxious digital record label</a>
 					<a href="http://www.couchsurfing.org/people/willdayble/"><strong><b class="caret"></b> couchsurfing</strong> for visiting backpackers</a>
-					<a href="http://flickr.com/photos/willdayble"><strong><b class="caret"></b> flickr</strong> for photography</a>				
+					<a href="http://flickr.com/photos/willdayble"><strong><b class="caret"></b> flickr</strong> for photography</a>
+					<a href="https://github.com/willdayble"><strong><b class="caret"></b> Github</strong> open source code (including this site)</a>
+					
 				</p>
 <!--
 				<p>In remaking willdayble.com, I couldn't figure out a smart way to personify myself in code, so I asked a few friends and clients what <em>they</em> thought.</p>
@@ -99,14 +101,14 @@
 -->
 			</div>
 			<div class="span4 contactz">
-				<p>I'm lucky enough to do projects with rad teams. I'm into meeting clever people who are into building a better world.</p>
+				<p>I'm lucky enough to do projects with rad teams. I'm into meeting people who are hyped about building a better world by being clever.</p>
 				<hr>
-				<p>If you want to say hi, try these:</p>
+				<p>Say hello:</p>
 				<div class="chat">
-					<p><label>LinkedIn</label> <a href="http://facebook.com/willdayble">/willdayble</a></p>
+					<p><label>LinkedIn</label> <a href="http://facebook.com/willdayble">willdayble</a></p>
 					<p><label>Mail</label> <input type="text" value="will@willdayble.com"></p>
-					<p><label>Face</label> <a href="http://facebook.com/willdayble">/willdayble</a></p>
-					<p><label>Tweet</label> <a href="http://twitter.com/willdayble">@willdayble</a></p>					
+					<p><label>Facebook</label> <a href="http://facebook.com/willdayble">willdayble</a></p>
+					<p><label>Twitter</label> <a href="http://twitter.com/willdayble">@willdayble</a></p>					
 					<p><label>Skype</label> <input type="text" value="willdayble"></p>
 					<p><label>AIM</label> <input type="text" value="willdayble"></p>
 					<p><label>MSN</label> <input type="text" value="msn@willdayble.com"></p>
