linkedin addy wrong

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<hr>
 				<p>Say hello:</p>
 				<div class="chat">
-					<p><label>LinkedIn</label> <a href="http://facebook.com/willdayble">willdayble</a></p>
+					<p><label>LinkedIn</label> <a href="http://www.linkedin.com/in/willdayble">willdayble</a></p>
 					<p><label>Mail</label> <input type="text" value="will@willdayble.com"></p>
 					<p><label>Facebook</label> <a href="http://facebook.com/willdayble">willdayble</a></p>
 					<p><label>Twitter</label> <a href="http://twitter.com/willdayble">@willdayble</a></p>					
