--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -57,12 +57,15 @@
 			Will Dayble
 		</a>
 		<span class="menu">
-			<a href="#" rel="dude">Contact</a>
+			<a href="#" rel="dude">Dude</a>
 			<a href="#" rel="about">About</a>
 			<a href="#" rel="vidya">Video</a>
 			<a href="#" rel="squareweave">Squareweave</a>
-
-		
+			<a href="#" rel="clarity">Clarity Engine</a>
+			<a href="#" rel="bankai">Bankai</a>
+			<a href="#" rel="allcaps">ALL CAPS Records</a>
+			<a href="#" rel="speaking">Speaking</a>
+			<a href="#" rel="contact">Contact</a>
 		</span>
 	</h1>
 	
@@ -76,6 +79,7 @@
 <!-- 		</div> -->
 		
 		<div class="content">
+		
 			<div class="tab active" id="dude">
 				<div class="dude">
 					<img src="design/images/dude.png" alt="dude">
@@ -85,6 +89,8 @@
 					</div>
 				</div>
 			</div>
+			
+			
 			<div class="tab" id="about">
 				<div class="about">
 					&ldquo;He speaks like he's leading a charge. He's honest and disarming. He's entirely unhinged and absolutely fucking <em>on</em>.&rdquo;
@@ -94,12 +100,65 @@
 			</div>
 			
 			<div class="vidya tab" id="vidya">
-				<iframe src="http://www.youtube.com/embed/DSfFgf8geS4" height="420" frameborder="0" allowfullscreen=""></iframe>
-			</div>			
+				<div class="dude">
+					<a class="hero" href="http://www.youtube.com/watch?v=DSfFgf8geS4" target="_blank"><img src="design/images/danger.png" alt="danger"></a>
+					<div class="zing">
+						<h3>Dangerous Ideas</h3>
+						<p>I did a TEDx talk about crossbows, web apps, The Pirate Bay, punk rock, Aussie politics and buying 10,000 balloons from China.</p>
+						<p><a class="btn btn-icon bn-large" href="http://www.youtube.com/watch?v=DSfFgf8geS4"><i class="ss-social ss-youtube"></i> Watch it</a></p>
+					</div>
+				</div>
+			</div><!-- tab -->	
 
 			<div class="squareweave tab" id="squareweave">
-				<a href="http://squareweave.com.au">Squareweave!</a>
-			</div>				
+				<div class="dude">
+					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/sqwwall.png" alt="Squareweave"></a>
+					<div class="zing">
+						<h3>Director</h3>
+						<p>I am one of two Directors at <a href="http://squareweave.com.au">Squareweave</a>. I'm responsible for taste, style and design.</p>
+					</div>
+				</div>
+			</div><!-- tab -->	
+
+			<div class="clarity tab" id="clarity">
+				<div class="dude">
+					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/clarity.png" alt="Clarity Engine"></a>
+					<div class="zing">
+						<h3>Clarity Engine</h3>
+						<p>I founded <a href="http://clarityengine.org">Clarity Engine</a> to make Charity smarter, measured and social.</p>
+					</div>
+				</div>
+			</div><!-- tab -->
+
+			<div class="bankai tab" id="bankai">
+				<div class="dude">
+					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/bankai.png" alt="Bankai"></a>
+					<div class="zing">
+						<h3>Bass Music</h3>
+						<p>I've been producing and touring as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music.</p>
+					</div>
+				</div>
+			</div><!-- tab -->
+
+			<div class="allcaps tab" id="allcaps">
+				<div class="dude">
+					<a class="hero" href="http://allcaps.fm" target="_blank"><img src="design/images/allcaps.png" alt="ALL CAPS"></a>
+					<div class="zing">
+						<h3>ALL CAPS</h3>
+						<p>A small, mobile, fiercely independent digital label. No punches pulled and few fucks given.</p>
+					</div>
+				</div>
+			</div><!-- tab -->
+
+			<div class="allcaps tab" id="allcaps">
+				<div class="dude">
+					<a class="hero" href="http://allcaps.fm" target="_blank"><img src="design/images/allcaps.png" alt="ALL CAPS"></a>
+					<div class="zing">
+						<h3>Speaking</h3>
+						<p>I talk for corporates, small teams, big teams, stadiums and more...</p>
+					</div>
+				</div>
+			</div><!-- tab -->
 			
 		</div>
 	
