MORE INTENSE EXPERIENCES PLEASE

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -125,7 +125,7 @@
 					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/clarity.png" alt="Clarity Engine"></a>
 					<div class="zing">
 						<h3>Clarity Engine</h3>
-						<p>I founded <a href="http://clarityengine.org">Clarity Engine</a> to make Charity smarter, measured and social.</p>
+						<p>I founded <a href="http://clarityengine.org">Clarity Engine</a> to make giving to charity smarter, measured and social. </p>
 					</div>
 				</div>
 			</div><!-- tab -->
@@ -135,7 +135,7 @@
 					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/bankai.png" alt="Bankai"></a>
 					<div class="zing">
 						<h3>Bass Music</h3>
-						<p>I've been producing and touring as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music.</p>
+						<p>I've been producing and touring internationally as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music for your face.</p>
 					</div>
 				</div>
 			</div><!-- tab -->
@@ -150,9 +150,9 @@
 				</div>
 			</div><!-- tab -->
 
-			<div class="allcaps tab" id="allcaps">
+			<div class="talks tab " id="allcaps">
 				<div class="dude">
-					<a class="hero" href="http://allcaps.fm" target="_blank"><img src="design/images/allcaps.png" alt="ALL CAPS"></a>
+					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-chat"></i></a>
 					<div class="zing">
 						<h3>Speaking</h3>
 						<p>I talk for corporates, small teams, big teams, stadiums and more...</p>
