--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Luke Giuliani</title>
+<title>Will Dayble</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -150,12 +150,31 @@
 				</div>
 			</div><!-- tab -->
 
-			<div class="talks tab " id="allcaps">
+			<div class="speaking tab " id="speaking">
 				<div class="dude">
 					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-chat"></i></a>
 					<div class="zing">
 						<h3>Speaking</h3>
-						<p>I talk for corporates, small teams, big teams, stadiums and more...</p>
+						<p>I talk to corporates, charities, and teams about the net, lean projects and getting shit done. Also, <a href="http://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank">drunks</a>.</p>
+						<p><a class="btn btn-icon bn-large" href="mailto:will@willdayble.com"><i class="ss-mail"></i> Email me for bookings</a></p>
+					</div>
+				</div>
+			</div><!-- tab -->
+
+			<div class="contact tab " id="contact">
+				<div class="dude">
+					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-mail"></i></a>
+					<div class="zing">
+						<h3>Contact me</h3>
+						<p>
+							<a class="btn btn-icon bn-large" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a>
+							<a class="btn btn-icon bn-large" href="http://www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i> LinkedIn</a>
+							<a class="btn btn-icon bn-large" href="http://twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i> @willdayble</a>
+							<a class="btn btn-icon bn-large" href="http://facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook	"></i> Facebook</a>
+							<a class="btn btn-icon bn-large" href="skype:willdayble?call"><i class="ss-social ss-skype"></i> Skype me</a>
+							<a class="btn btn-icon bn-large" href="http://pinterest.com/willdayble/" target="_blank"><i class="ss-social ss-pinterest"></i> Pintrest</a>
+							
+						</p>
 					</div>
 				</div>
 			</div><!-- tab -->
