--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -20,7 +20,7 @@
 <![endif]-->
 
 <!-- Le fav and touch icons -->
-<link rel="shortcut icon" href="design/bootstrap/ico/favicon.ico">
+<link rel="shortcut icon" href="design/images/favicon.ico">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="design/bootstrap/ico/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="design/bootstrap/ico/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="design/bootstrap/ico/apple-touch-icon-72-precomposed.png">
