lawl right links

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -122,17 +122,17 @@
 
 			<div class="clarity tab" id="clarity">
 				<div class="dude">
-					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/clarity.png" alt="Clarity Engine"></a>
+					<a class="hero" href="http://clarityengine.org" target="_blank"><img src="design/images/clarity.png" alt="Clarity Engine"></a>
 					<div class="zing">
 						<h3>Clarity Engine</h3>
-						<p>I founded <a href="http://clarityengine.org">Clarity Engine</a> to make giving to charity smarter, measured and social. </p>
+						<p>I founded <a href="http://clarityengine.org">Clarity Engine</a> to make giving to charity smarter, measured and social. We makin charity sexy.</p>
 					</div>
 				</div>
 			</div><!-- tab -->
 
 			<div class="bankai tab" id="bankai">
 				<div class="dude">
-					<a class="hero" href="http://squareweave.com.au" target="_blank"><img src="design/images/bankai.png" alt="Bankai"></a>
+					<a class="hero" href="http://bankai.fm" target="_blank"><img src="design/images/bankai.png" alt="Bankai"></a>
 					<div class="zing">
 						<h3>Bass Music</h3>
 						<p>I've been producing and touring internationally as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music for your face.</p>
