--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,6 +44,17 @@
 
 <body>
 
+<div class="kontakt">
+	<a class="" href="mailto:will@willdayble.com"><i class="ss-mail"></i></a>
+	<a class="" href="http://www.linkedin.com/in/willdayble" target="_blank"><i class="ss-social ss-linkedin"></i></a>
+	<a class="" href="http://twitter.com/willdayble" target="_blank"><i class="ss-social ss-twitter"></i></a>
+	<a class="" href="http://facebook.com/willdayble" target="_blank"><i class="ss-social ss-facebook	"></i></a>
+	<a class="" href="skype:willdayble?call"><i class="ss-social ss-skype"></i></a>
+	<a class="" href="http://pinterest.com/willdayble/" target="_blank"><i class="ss-social ss-pinterest"></i></a>
+</div>
+
+
+
 <div class="bound">
 	
 	
@@ -183,6 +194,7 @@
 	</div>
 
 </div><!-- bound -->
+
 
 <!-- Le javascript
 ================================================== -->
