latest willdayble edits

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -70,12 +70,12 @@
 		<span class="menu">
 			<a href="#" rel="dude">Dude</a>
 			<a href="#" rel="about">About</a>
+			<a href="#" rel="speaking">Speaking</a>			
 			<a href="#" rel="vidya">Video</a>
 			<a href="#" rel="squareweave">Squareweave</a>
 			<a href="#" rel="clarity">Clarity Engine</a>
 			<a href="#" rel="bankai">Bankai</a>
 			<a href="#" rel="allcaps">ALL CAPS Records</a>
-			<a href="#" rel="speaking">Speaking</a>
 			<a href="#" rel="contact">Contact</a>
 		</span>
 	</h1>
@@ -104,11 +104,22 @@
 			
 			<div class="tab" id="about">
 				<div class="about">
-					&ldquo;He speaks like he's leading a charge. He's honest and disarming. He's entirely unhinged and absolutely fucking <em>on</em>.&rdquo;
+					&ldquo;He speaks like he's leading a charge. He's honest and disarming. He's entirely unhinged and absolutely <em>on</em>.&rdquo;
 					<cite>- <a href="http://danehunnerup.com">danehunnerup.com</a></cite>
 					<!-- <span id="distance">?</span> -->
 				</div>
 			</div>
+			
+			<div class="speaking tab " id="speaking">
+				<div class="dude">
+					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-chat"></i></a>
+					<div class="zing">
+						<h3>Speaking</h3>
+						<p>I talk to corporates, charities, and teams about the net, lean projects and getting shit done. Also, <a href="http://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank">drunks</a>.</p>
+						<p><a class="btn btn-icon bn-large" href="http://squareweave.com.au/will"><i class="ss-navigateright"></i> Info &amp; booking details</a></p>
+					</div>
+				</div>
+			</div><!-- tab -->			
 			
 			<div class="vidya tab" id="vidya">
 				<div class="dude">
@@ -146,7 +157,7 @@
 					<a class="hero" href="http://bankai.fm" target="_blank"><img src="design/images/bankai.png" alt="Bankai"></a>
 					<div class="zing">
 						<h3>Bass Music</h3>
-						<p>I've been producing and touring internationally as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music for your face.</p>
+						<p>I've been producing and touring internationally as <a href="http://bankai.fm">Bankai</a> for a few years. Big ugly bass music.</p>
 					</div>
 				</div>
 			</div><!-- tab -->
@@ -157,17 +168,6 @@
 					<div class="zing">
 						<h3>ALL CAPS</h3>
 						<p>A small, mobile, fiercely independent digital label. No punches pulled and few fucks given.</p>
-					</div>
-				</div>
-			</div><!-- tab -->
-
-			<div class="speaking tab " id="speaking">
-				<div class="dude">
-					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-chat"></i></a>
-					<div class="zing">
-						<h3>Speaking</h3>
-						<p>I talk to corporates, charities, and teams about the net, lean projects and getting shit done. Also, <a href="http://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank">drunks</a>.</p>
-						<p><a class="btn btn-icon bn-large" href="mailto:will@willdayble.com"><i class="ss-mail"></i> Email me for bookings</a></p>
 					</div>
 				</div>
 			</div><!-- tab -->
