--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -110,9 +110,9 @@
 				</div>
 			</div>
 			
-			<div class="speaking tab " id="speaking">
+			<div class="tab " id="speaking">
 				<div class="dude">
-					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-chat"></i></a>
+					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><img src="design/images/speaking.png" alt="Speaking"></a>
 					<div class="zing">
 						<h3>Speaking</h3>
 						<p>I talk to corporates, charities, and teams about the net, lean projects and getting shit done. Also, <a href="http://www.youtube.com/watch?v=r2CbbBLVaPk" target="_blank">drunks</a>.</p>
@@ -174,7 +174,7 @@
 
 			<div class="contact tab " id="contact">
 				<div class="dude">
-					<a class="hero" href="http://www.youtube.com/user/squareweave" target="_blank"><i class="ss-mail"></i></a>
+					<a class="hero" href="mailto:will@willdayble.com" target="_blank"><img src="design/images/chat.png" alt="Email me"></a>
 					<div class="zing">
 						<p>
 							<a class="btn btn-icon bn-large" href="mailto:will@willdayble.com"><i class="ss-mail"></i> will@willdayble.com</a>
