--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -8,11 +8,16 @@
 <meta name="author" content="">
 
 <!-- Le styles -->
+
+<!--
 <link href="design/bootstrap/css/bootstrap.css" rel="stylesheet">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
+<link href="design/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+-->
+<link href="design/css/normalize.css" rel="stylesheet">
 <link href="design/vendor/ss-everything/ss-everything.css" rel="stylesheet">
 <link href="design/css/go.css" rel="stylesheet">
-<link href="design/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
 
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
